syntax = "proto3";

package auth_v1;

option go_package = "github.com/olezhek28/microservices_course/week_6/jwt/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

// =================
// register 
// =================

message RegisterRequest{
  RegisterUserInfo info = 1;
}

message RegisterResponse{
  int64 id = 1;
}

message RegisterUserInfo{
  UserInfo info= 1;
  string password = 2;
  string confirmPassword = 3;
}

enum Roles{
  user = 0;
  supplier =1;
  admin = 2;
}

message UserInfo{
  string name = 1;
  string phone_number = 2;
  Roles role= 3;
}

// =================
// login
// =================

message LoginRequest {
  string phone_number = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
  string access_token = 2;
}


message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}